<resources>
    <string name="hello">Hello World, ENAIActivity!</string>
    <string name="app_name">ENAI</string>
    <string name="labelAdmissionDate2">Admission</string>
    <string name="labelAdmissionDate1">Date of</string>
    <string name="labelAdmissionTime1">Time of</string>
    <string name="labelAdmissionTime2">Admission</string>
    <string name="labelRupturedMembranes1">Ruptured</string>
    <string name="labelRupturedMembranes2">Membranes</string>
    <string name="labelName">Name</string>
    <string name="labelGravida">Gravida</string>
    <string name="labelPara">Para</string>
    <string name="labelFetalHeartRate1">Fetal</string>
    <string name="labelFetalHeartRate2">Heart Rate</string>
    <string name="labelUterineContraction1">Uterine</string>
    <string name="labelUterineContraction2">Contractions</string>
    <string name="labelPulseRate1">Pulse</string>
    <string name="labelPulseRate2">Rate</string>
    <string name="labelBloodPressure1">Blood</string>
    <string name="labelBloodPressure2">Pressure</string>
    <string name="labelAmnioticFluid1">Fluid</string>
    <string name="labelMolding">Molding</string>
    <string name="labelCervix">Cervix (cm)</string>
    <string name="labelOxytocin">Oxytocin U/L</string>
    <string name="labelDropsPerMin">drops/min</string>
    <string name="labelTemperature">Temperature</string>
    <string name="voip_username">1003</string>
    <string name="voip_password">telehealth</string>
    <string name="voip_domain">one.telehealh.ph</string>
    <string name="pref_tunnel">Tunnel</string>
    <string name="pref_tunnel_host">Hostname</string>
    <string name="pref_tunnel_port">Port</string>
    <string name="pref_tunnel_mode">Mode</string>
    <string-array name="tunnel_mode_entries">
        <item>disabled</item>
        <item>3G only</item>
        <item>always</item>
        <item>auto</item>
    </string-array>
    <string name="incall_notif_active">Audio call ongoing</string>
    <string name="incall_notif_paused">Paused call ongoing</string>
    <string name="incall_notif_video">Video capturing call ongoing</string>
    <string name="not_ready_to_make_new_call">Not ready for a new call</string>
    <string name="bad_target_uri">Bad contact : %s</string>
    <string name="reset_sas_fmt">Reset verified %s</string>
    <string name="verify_sas_fmt">Verify %s</string>
    <string name="communication_encrypted">Encrypted</string>
    <string name="waiting_for_startup">Starting up…</string>
    <string name="couldnt_accept_call">An error occurred while accepting call</string>
    <string name="error_adding_new_call">Error adding new call</string>
    <string name="transfer_started">Transfer initiated</string>
    <string name="transfer_dialog_title">Transfer call to</string>
    <string name="transfer_to_new_call">New call</string>
    <string name="resume_dialog_title">Resume call</string>
    <string name="cannot_resume_paused_by_remote_call">Cannot resume call paused by remote</string>
    <string name="conf_show_details_text">Show details</string>
    <string name="skipable_error_service_not_ready">Warning: service is not ready</string>
    <string name="close_button_text">Close</string>
    <string name="status_conf_call">conf</string>
    <string name="status_active_call">active</string>
    <string name="state_paused">paused</string>
    <string name="state_paused_by_remote">paused by remote</string>
    <string name="state_streams_running"></string>
    <string name="state_incoming_received">incoming</string>
    <string name="state_outgoing_ringing">ringing</string>
    <string name="state_outgoing_progress">calling</string>
    <string name="mutemic_button_txt">Mute</string>
    <string name="speaker_button_txt">Speaker</string>
    <string name="bluetooth_button_txt">Bluetooth</string>
    <string name="CancelButtonText">Cancel</string>
    <string name="AddCallButtonText">Add call</string>
    <string name="TransferCallButtonText">Transfer call</string>
    <string name="conf_admin_choice_enter">Enter conference</string>
    <string name="conf_admin_choice_leave">Momentarily leave conference</string>
    <string name="conf_admin_choice_terminate">Terminate conference</string>
    <string name="conf_choice_transfer_existing">Transfer to existing call</string>
    <string name="conf_choice_transfer_new">Transfer to new call</string>
    <string name="conf_choice_resume">Resume</string>
    <string name="conf_choice_pause">Pause</string>
    <string name="conf_choice_merge_to_conference">Add to conference</string>
    <string name="conf_choice_merge_all_to_conference">Add all calls to conference</string>
    <string name="conf_choice_remove_from_conference">Remove from the conference</string>
    <string name="conf_choice_terminate">Terminate</string>
    <string name="hangup">Hang up</string>
    <string name="conf_simple_merge_bt_txt">Merge</string>
    <string name="conf_simple_transfer_bt_txt">Transfer</string>
    <string name="conf_simple_video_bt_txt">video</string>
    <string name="show_send_dtmfs_button">Dialpad</string>
    <string name="conf_conference">Conference</string>
    <string name="in_conf">You are part of it</string>
    <string name="in_conf_leave">Go out</string>
    <string name="out_conf">You are out of it</string>
    <string name="out_conf_enter">Go in</string>
    <string name="pref_audio_hacks_title">Audio hacks</string>
    <string name="pref_audio_use_specific_mode_title">Use specific mode hack</string>
    <string name="pref_audio_use_specific_mode_summary">0=MODE_NORMAL (default), 2=MODE_IN_CALL</string>
    <string name="pref_audio_hacks_use_routing_api_title">Use routing API hack</string>
    <string name="pref_audio_hacks_use_galaxys_hack_title">Use Galaxy S audio hack</string>
    <string name="pref_audio_soft_volume_title">Use software volume</string>
    <string name="pref_ipv6_title">Use ipv6 instead of ipv4</string>
    <string name="error_while_accepting_pending_call">Error while accepting pending call</string>
    <string name="incoming_call_dialog_title">%s is calling you</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="unknown_incoming_call_name">Unknown</string>
    <string name="pref_network_title">Network</string>
    <string name="pref_transport_udp">UDP</string>
    <string name="pref_transport_tcp">TCP</string>
    <string name="pref_transport_tls">TLS</string>
    <string name="pref_transport_use_standard_ports">Use standard ports</string>
    <string name="at_least_a_protocol">At least one item is required</string>
    <string name="first_launch_ok">Registration successful</string>
    <string name="error">Error</string>
    <string name="click_to_show_first_login_view">Start</string>
    <string name="dialer_null_on_new_intent">Application not ready</string>
    <string name="no_phone_numbers">No phone numbers found for %s</string>
    <string name="filter_contacts">Filter contacts</string>
    <string name="title_numbers_dialog">%s\'s phone numbers</string>
    <string name="pref_echo_canceller_calibration">Echo canceller calibration</string>
    <string name="pref_echo_limiter">Echo limiter</string>
    <string name="pref_video_use_front_camera_title">Use front camera</string>
    <string name="pref_video">Video</string>
    <string name="pref_preferences">Preferences</string>
    <string name="pref_video_codec_h263_title">H263</string>
    <string name="pref_video_codec_mpeg4_title">MPEG4</string>
    <string name="pref_video_codec_h264_title">H264</string>
    <string name="pref_video_codecs_title">Codecs</string>
    <string name="pref_video_codecs_key">pref_video_codecs_key</string>
    <string name="menu_videocall_back_to_dialer_title">Display dialer</string>
    <string name="menu_videocall_switch_camera_title">Front/Rear Camera</string>
    <string name="menu_videocall_change_resolution_when_low_resolution">Try High resolution</string>
    <string name="menu_videocall_change_resolution_when_high_resolution">Low resolution</string>
    <string name="menu_videocall_change_resolution_title">Change resolution</string>
    <string name="menu_videocall_toggle_camera_title">Mute/Unmute camera</string>
    <string name="menu_videocall_toggle_camera_disable">Disable camera</string>
    <string name="menu_videocall_toggle_camera_enable">Enable camera</string>
    <string name="menu_videocall_terminate_call_title">Terminate call</string>
    <string name="pref_video_settings_title">Video settings</string>
    <string name="pref_video_automatically_share_my_video_title">Share my camera</string>
    <string name="pref_video_automatically_share_my_video">Automatically send my camera</string>
    <string name="pref_video_initiate_call_with_video_title">Initiate video calls</string>
    <string name="pref_video_initiate_call_with_video"></string>
    <string name="pref_video_enable_title">Enable Video</string>
    <string name="pref_escape_plus">Replace + by 00</string>
    <string name="pref_ilbc_summary">iLBC might be unavailable depending on ARM processor and Android OS version.</string>
    <string name="pref_echo_cancellation">Echo cancellation</string>
    <string name="pref_autostart">Start at boot time</string>
    <string name="pref_enable_outbound_proxy">Outbound proxy</string>
    <string name="pref_codec_pcma">pcma</string>
    <string name="pref_codec_pcmu">pcmu</string>
    <string name="pref_codec_gsm">gsm</string>
    <string name="pref_codec_g722">g722</string>
    <string name="pref_codec_amr">amr</string>
    <string name="pref_codec_ilbc">ilbc</string>
    <string name="pref_codec_speex8">speex 8 Khz</string>
    <string name="pref_codec_speex16">speex 16 Khz</string>
    <string name="pref_codec_silk8">silk 8 Khz</string>
    <string name="pref_codec_silk12">silk 12 Khz</string>
    <string name="pref_codec_silk16">silk 16 Khz</string>
    <string name="pref_codec_silk24">silk 24 Khz</string>
    <string name="pref_codecs">Codecs</string>
    <string name="place_call_chooser">Place a call</string>
    <string name="pref_debug">Debug</string>
    <string name="about_report_issue">Report issue</string>
    <string name="about_bugreport_email_text">Describe problem here</string>
    <string name="about_error_generating_bugreport_attachement">Error generating bug report</string>
    <string name="about_logs_not_found">Logs not found.</string>
    <string name="about_reading_logs">Reading logs, may takes time…</string>
    <string name="about_mailer_chooser_text">Send bug report with…</string>
    <string name="menu_about">About</string>
    <string name="pref_audio">Audio</string>
    <string name="menu_exit">Exit</string>
    <string name="pref_prefix">Prefix</string>
    <string name="pref_advanced">Advanced</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_proxy">Proxy</string>
    <string name="pref_domain">Domain*</string>
    <string name="pref_passwd">Password*</string>
    <string name="pref_username">Username*</string>
    <string name="pref_sipaccount">SIP Account</string>
    <string name="wrong_username">wrong user name</string>
    <string name="wrong_passwd">wrong password</string>
    <string name="wrong_domain">Wrong domain</string>
    <string name="wrong_settings">Wrong settings</string>
    <string name="tab_dialer">Dialer</string>
    <string name="tab_contact">Contact</string>
    <string name="call_error">Cannot call %s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dismiss">Dismiss</string>
    <string name="cont">Continue</string>
    <string name="never_remind">Never remind me</string>
    <string name="config_error">%s, do you want to go to the settings page ?</string>
</resources>