<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent">
			<TextView
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="Name"
				android:id="@+id/labelName_simple">
			</TextView>
			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:id="@+id/patientName_simple">
				<requestFocus></requestFocus>
			</EditText>
		</LinearLayout>
		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent">
			<TextView
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="Gravida"></TextView>
			<EditText
				android:inputType="number"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/patientGravida_simple"
				android:layout_weight="0.35"></EditText>
			<TextView
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="Para"
				android:layout_marginLeft="10dip"></TextView>
			<EditText
				android:inputType="number"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/patientPara_simple"
				android:layout_weight="0.30"></EditText>
			<TextView
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="Hospital No."
				android:layout_marginLeft="10dip"></TextView>
			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:id="@+id/patientHospitalNo_simple"
				android:inputType="number"></EditText>
		</LinearLayout>
		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent">
			<LinearLayout
				android:layout_height="match_parent"
				android:layout_width="wrap_content"
				android:orientation="vertical">
				<TextView
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/labelAdmissionDate1"></TextView>
				<TextView
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/labelAdmissionDate2"></TextView>
			</LinearLayout>
			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:id="@+id/patientDateOfAdmission_simple"
				android:inputType="date"></EditText>
			<LinearLayout
				android:layout_height="match_parent"
				android:layout_width="wrap_content"
				android:orientation="vertical"
				android:layout_marginLeft="10dip">
				<TextView
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/labelAdmissionTime1"></TextView>
				<TextView
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/labelAdmissionTime2"></TextView>
			</LinearLayout>
			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:id="@+id/patientTimeOfAdmission_simple"
				android:inputType="time"></EditText>
		</LinearLayout>

		
				<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="horizontal">
			<LinearLayout
				android:layout_width="150dp"
				android:layout_height="fill_parent"
				android:orientation="vertical"
				android:id="@+id/RowNamesTable_simple">
				<TextView
				    android:layout_width="150dp"
				    android:layout_height="4in"
				    android:text="">
				</TextView>
			</LinearLayout>
			<HorizontalScrollView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:scrollbars="horizontal"
				android:focusable="true"
				android:focusableInTouchMode="true">
				<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:orientation="vertical">
					
					<LinearLayout
						android:id="@+id/CervixPlotArea_simple"
						android:layout_width="wrap_content"
						android:layout_height="4in"
						android:orientation="vertical"
						android:gravity="center"
						android:background="@drawable/img_cervix_plot_simple"
						android:padding="10dp">
					</LinearLayout>
					<TableLayout
						android:id="@+id/PartographTable_simple"
						android:layout_width="fill_parent"
						android:layout_height="fill_parent">
					</TableLayout>
				</LinearLayout>
			</HorizontalScrollView>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dip"
			android:gravity="right">
			<Button
				android:width="100dip"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/VoIPButton_simple"
				android:text="VoIP"
				android:layout_gravity="right"
				android:layout_marginRight="50dp"></Button>
			<Button
				android:width="100dip"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/emailButton_simple"
				android:text="Email"
				android:layout_gravity="right"
				android:layout_marginRight="50dp"></Button>
		</LinearLayout>
	</LinearLayout>
</ScrollView>